fix(Navbar): white space on mobile

--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -3,6 +3,8 @@
 	width: 100%;
 	height: 78px;
 	position: relative;
+	background-color: var(---white);
+	z-index: 1;
 }
 
 .logo {
@@ -10,9 +12,8 @@
 }
 
 .listContainer {
-	background: var(---beige);
+	background-color: var(---beige);
 	padding: 4px 16px;
-	/* min-height: 100px; */
 }
 
 .listContainerRelative {
@@ -24,17 +25,21 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	max-width: 100%;
+	width: 100%;
 	text-align: center;
-	padding: 0 1rem;
 	line-height: 30px;
 	position: absolute;
 	top: -200%;
-	right: 40%;
+	background-color: var(---beige);
+	left: 50%;
+	margin-left: -50%;
+	z-index: -49;
+	transition: all 0.5s ease-in-out;
 }
 
 .active {
 	top: 50px;
+	z-index: 49;
 }
 
 .listItem {
@@ -64,6 +69,7 @@
 	position: absolute;
 	top: 85px;
 	right: 16px;
+	z-index: 49;
 }
 
 .langSelector {
@@ -96,13 +102,17 @@
 /* Tablet screen */
 
 @media (min-width: 481px) and (max-width: 820px) {
+	.logoContainer {
+		background-color: transparent;
+	}
+
 	.selectLng {
 		top: 1rem;
 	}
 
 	.listContainer {
 		min-height: 2rem;
-		background-color: var(---lightPink);
+		background-color: transparent;
 	}
 
 	.list {
@@ -112,10 +122,17 @@
 		margin: 0.5rem auto;
 		justify-content: space-between;
 		width: 300px;
+		background-color: transparent;
+		transition: none;
+		z-index: 1;
 	}
 }
 
 @media (min-width: 821px) {
+	.logoContainer {
+		background-color: transparent;
+	}
+
 	.selectLng {
 		top: 1rem;
 		right: 2rem;
@@ -123,7 +140,7 @@
 
 	.listContainer {
 		min-height: 2rem;
-		background-color: var(---white);
+		background-color: transparent;
 	}
 
 	.list {
@@ -133,6 +150,9 @@
 		flex-direction: row;
 		justify-content: space-between;
 		width: 40%;
+		background-color: transparent;
+		transition: none;
+		z-index: 1;
 	}
 
 	.logoContainer {
